2019-07-10  Yannick Moy  <moy@adacore.com>

	* sem_aux.adb, sem_aux.ads (Is_Protected_Operation): New
	function to determine if a subprogram is protected.
	* sem_spark.adb (Setup_Protected_Components): New procedure to
	add protected components to the environment.
	(Check_Callable_Body): Call the new Setup_Protected_Components.
	(Check_Package_Spec): Merge local environment with enclosing one
	when done.

2019-07-10  Claire Dross  <dross@adacore.com>

	* sem_spark.adb (Check_Expression): Allow digits constraints as
	input.
	(Illegal_Global_Usage): Pass in the entity.
	(Is_Subpath_Expression): New function to allow different nodes
	as inner parts of a path expression.
	(Read_Indexes): Allow concatenation and aggregates with box
	expressions.  Allow attributes Update and Loop_Entry.
	(Check_Expression): Allow richer membership test.
	(Check_Node): Ignore bodies of generics.
	(Get_Root_Object): Allow concatenation and attributes.

2019-07-10  Hristian Kirtchev  <kirtchev@adacore.com>

	* sem_ch6.adb (Check_Discriminant_Conformance): Use Find_Type to
	discover the type of a full view discriminant.

2019-07-10  Arnaud Charlet  <charlet@adacore.com>

	* doc/gnat_ugn/gnat_and_program_execution.rst: Improve gnatmem's
	doc for the depth switch.

2019-07-10  Bob Duff  <duff@adacore.com>

	* doc/gnat_ugn/gnat_utility_programs.rst: Document gnatpp's
	--source-line-breaks switch.

2019-07-10  Justin Squirek  <squirek@adacore.com>

	* doc/gnat_rm/implementation_defined_attributes.rst: Add mention
	of 'Image attribute with 'Img's entry to mention additional
	added 2012 usage of Obj'Image.
	* doc/gnat_rm/implementation_defined_pragmas.rst: Correct
	mispelling of Async_Writers.
	* gnat_rm.texi: Regenerate.
	* sem_prag.adb (Analyze_Pragma): Correct mispelling of
	Async_Writers.
	* sem_util.adb (State_Has_Enabled_Property): Correct mispelling
	of Async_Writers.

2019-07-10  Simon Buist  <buist@adacore.com>

	* sem_util.ads (Child_Prefix): New constant.